[gd_scene load_steps=90 format=3 uid="uid://dxnkfj47wkm23"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7rjoq"]
[ext_resource type="Texture2D" uid="uid://cfu1x4qmoxqg2" path="res://assets/sprites/vagabond/idle/idle01.png" id="2_6bst3"]
[ext_resource type="Texture2D" uid="uid://bot1brva64bdn" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack01.png" id="2_brw2j"]
[ext_resource type="Texture2D" uid="uid://cyte1u53quo2e" path="res://assets/sprites/vagabond/dash/dash01.png" id="2_rhtpy"]
[ext_resource type="Texture2D" uid="uid://dijyv4krl1erl" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack02.png" id="3_fc6ob"]
[ext_resource type="Texture2D" uid="uid://bknmopqagfoqh" path="res://assets/sprites/vagabond/dash/dash02.png" id="3_p1agm"]
[ext_resource type="Texture2D" uid="uid://r2hcoqjuq3d6" path="res://assets/sprites/vagabond/idle/idle02.png" id="3_py1ao"]
[ext_resource type="Texture2D" uid="uid://cbyornsefd670" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack03.png" id="4_8c6es"]
[ext_resource type="Texture2D" uid="uid://ba7qo3y50i81w" path="res://assets/sprites/vagabond/idle/idle03.png" id="4_ry7wa"]
[ext_resource type="Texture2D" uid="uid://doopnkxnronvh" path="res://assets/sprites/vagabond/dash/dash03.png" id="4_yc4yj"]
[ext_resource type="Texture2D" uid="uid://bcns7ww7n88pb" path="res://assets/sprites/vagabond/dash/dash04.png" id="5_0j4us"]
[ext_resource type="Texture2D" uid="uid://de0i78pmy0cf6" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack04.png" id="5_qlqgm"]
[ext_resource type="Texture2D" uid="uid://cb6222bcs5h4w" path="res://assets/sprites/vagabond/idle/idle04.png" id="5_rpbti"]
[ext_resource type="Texture2D" uid="uid://bgfyd17mk7y4j" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack05.png" id="6_6h43l"]
[ext_resource type="Texture2D" uid="uid://b7ju74slxbaes" path="res://assets/sprites/vagabond/idle/idle05.png" id="6_cqhor"]
[ext_resource type="Texture2D" uid="uid://5x6iivb625uj" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack06.png" id="7_gmwnx"]
[ext_resource type="Texture2D" uid="uid://ymxavjwbb54h" path="res://assets/sprites/vagabond/idle/idle07.png" id="7_m1atv"]
[ext_resource type="Texture2D" uid="uid://ovawaxtpsqmq" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack07.png" id="8_2iat1"]
[ext_resource type="Texture2D" uid="uid://dn2s3h3ar1ksi" path="res://assets/sprites/vagabond/idle/idle06.png" id="8_nngd8"]
[ext_resource type="Texture2D" uid="uid://ujp6ckbd562m" path="res://assets/sprites/vagabond/idle/idle08.png" id="9_st23i"]
[ext_resource type="Texture2D" uid="uid://sdtguyspetqb" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack08.png" id="9_xxpop"]
[ext_resource type="Texture2D" uid="uid://djmi1xm2jqamm" path="res://assets/sprites/vagabond/idle/idle09.png" id="10_400f8"]
[ext_resource type="Texture2D" uid="uid://or6pfoh6d2gr" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack09.png" id="10_si17p"]
[ext_resource type="Texture2D" uid="uid://dk233tsrkb8yx" path="res://assets/sprites/vagabond/idle/idle10.png" id="11_hkbrb"]
[ext_resource type="Texture2D" uid="uid://dda8i8b3jpo0c" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack10.png" id="11_vh5vn"]
[ext_resource type="Texture2D" uid="uid://csnaef7jdixy5" path="res://assets/sprites/vagabond/idle/idle11.png" id="12_5agq7"]
[ext_resource type="Texture2D" uid="uid://b8to4sedycbbd" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack11.png" id="12_477b5"]
[ext_resource type="Texture2D" uid="uid://hul4lswccupk" path="res://assets/sprites/vagabond/idle/idle12.png" id="13_0mi3s"]
[ext_resource type="Texture2D" uid="uid://b70mcghl24juy" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack12.png" id="13_t23k8"]
[ext_resource type="Texture2D" uid="uid://bblffgevt1mbl" path="res://assets/sprites/vagabond/idle/idle13.png" id="14_adkx2"]
[ext_resource type="Texture2D" uid="uid://wwtcu5auf45t" path="res://assets/sprites/vagabond/heavy_attack/heavy_attack13.png" id="14_cpksw"]
[ext_resource type="Texture2D" uid="uid://cqwsxwpccku47" path="res://assets/sprites/vagabond/idle/idle14.png" id="15_gg58l"]
[ext_resource type="Texture2D" uid="uid://bdmaxjldibtrp" path="res://assets/sprites/vagabond/idle/idle15.png" id="16_hf20q"]
[ext_resource type="Texture2D" uid="uid://cvvsr13akym1p" path="res://assets/sprites/vagabond/idle/idle16.png" id="17_s48ga"]
[ext_resource type="Texture2D" uid="uid://3rqy4d1b4vvo" path="res://assets/sprites/vagabond/idle/idle17.png" id="18_nfqwp"]
[ext_resource type="Texture2D" uid="uid://cv0k78okpad8f" path="res://assets/sprites/vagabond/idle/idle18.png" id="19_uo5ty"]
[ext_resource type="Texture2D" uid="uid://bxbcj17lmu1xw" path="res://assets/sprites/vagabond/idle/idle19.png" id="20_1tcyl"]
[ext_resource type="Texture2D" uid="uid://ct5mt22yb4kbo" path="res://assets/sprites/vagabond/idle/idle20.png" id="21_7um7m"]
[ext_resource type="Texture2D" uid="uid://de0inqcnfawdw" path="res://assets/sprites/vagabond/jump/jump01.png" id="22_6rde3"]
[ext_resource type="Texture2D" uid="uid://b8q726rskyjwp" path="res://assets/sprites/vagabond/run/run01.png" id="22_72b45"]
[ext_resource type="Texture2D" uid="uid://c1ef3m0ktjuwp" path="res://assets/sprites/vagabond/run/run02.png" id="23_gpeuw"]
[ext_resource type="Texture2D" uid="uid://d307hwi3udjlf" path="res://assets/sprites/vagabond/jump/jump02.png" id="23_sj2hs"]
[ext_resource type="Texture2D" uid="uid://c6a7k27meiie6" path="res://assets/sprites/vagabond/run/run03.png" id="24_8raaw"]
[ext_resource type="Texture2D" uid="uid://dxgldrgg2n6ii" path="res://assets/sprites/vagabond/jump/jump03.png" id="24_fvqau"]
[ext_resource type="Texture2D" uid="uid://cfldidoawgjbi" path="res://assets/sprites/vagabond/run/run04.png" id="25_0iq5j"]
[ext_resource type="Texture2D" uid="uid://dijhyc6jxemrs" path="res://assets/sprites/vagabond/death/death01.png" id="25_85s4c"]
[ext_resource type="Texture2D" uid="uid://b1mcjxenf0ich" path="res://assets/sprites/vagabond/attack/attack01.png" id="25_rq3gg"]
[ext_resource type="Texture2D" uid="uid://8uo0lxkmknas" path="res://assets/sprites/vagabond/run/run05.png" id="26_5nql1"]
[ext_resource type="Texture2D" uid="uid://dt1666f0wxgm6" path="res://assets/sprites/vagabond/attack/attack02.png" id="26_cw8od"]
[ext_resource type="Texture2D" uid="uid://cia5wm3wgxkx4" path="res://assets/sprites/vagabond/death/death02.png" id="26_txka7"]
[ext_resource type="Texture2D" uid="uid://yd4tvrn6tqj0" path="res://assets/sprites/vagabond/death/death03.png" id="27_owc6q"]
[ext_resource type="Texture2D" uid="uid://6pccflpkkf4t" path="res://assets/sprites/vagabond/run/run06.png" id="27_oxf6g"]
[ext_resource type="Texture2D" uid="uid://c8v3dbas1oqtg" path="res://assets/sprites/vagabond/attack/attack03.png" id="27_wgi8d"]
[ext_resource type="Texture2D" uid="uid://bsyqrokvhek5s" path="res://assets/sprites/vagabond/death/death04.png" id="28_colqp"]
[ext_resource type="Texture2D" uid="uid://ijbx2a2gn1mn" path="res://assets/sprites/vagabond/run/run07.png" id="28_kholh"]
[ext_resource type="Texture2D" uid="uid://crvqw5cfgwwt1" path="res://assets/sprites/vagabond/attack/attack04.png" id="28_psrp8"]
[ext_resource type="Texture2D" uid="uid://celv5mutsofnx" path="res://assets/sprites/vagabond/death/death05.png" id="29_r871r"]
[ext_resource type="Texture2D" uid="uid://xg07qmpbfpdq" path="res://assets/sprites/vagabond/attack/attack05.png" id="29_scbuj"]
[ext_resource type="Texture2D" uid="uid://cqrbcsdvq80r4" path="res://assets/sprites/vagabond/run/run08.png" id="29_y8rmw"]
[ext_resource type="Texture2D" uid="uid://cf48ybuu43ff6" path="res://assets/sprites/vagabond/death/death06.png" id="30_ce0wu"]
[ext_resource type="Texture2D" uid="uid://chcu1h03ox27x" path="res://assets/sprites/vagabond/attack/attack06.png" id="30_ytllc"]
[ext_resource type="Texture2D" uid="uid://2aee2nginmqf" path="res://assets/sprites/vagabond/death/death07.png" id="31_kf8tb"]
[ext_resource type="Texture2D" uid="uid://7cx36yrg3fht" path="res://assets/sprites/vagabond/get_hit/get_hit01.png" id="32_mdsum"]
[ext_resource type="Texture2D" uid="uid://dsevf3qi1ai6d" path="res://assets/sprites/vagabond/get_hit/get_hit02.png" id="33_8m3qr"]
[ext_resource type="Texture2D" uid="uid://bxdck1edxeico" path="res://assets/sprites/vagabond/get_hit/get_hit03.png" id="34_4xmop"]
[ext_resource type="Texture2D" uid="uid://dtjpucjykdnij" path="res://assets/sprites/vagabond/get_hit/get_hit04.png" id="35_eeqlt"]
[ext_resource type="Texture2D" uid="uid://cj65gve52ynqs" path="res://assets/sprites/vagabond/jump_flip/jump_flip01.png" id="48_5y3k6"]
[ext_resource type="Texture2D" uid="uid://by5iia5yiugtb" path="res://assets/sprites/vagabond/jump_flip/jump_flip02.png" id="49_wi6c0"]
[ext_resource type="Texture2D" uid="uid://r7ac812j1i7f" path="res://assets/sprites/vagabond/jump_flip/jump_flip03.png" id="50_2w5xf"]
[ext_resource type="PackedScene" uid="uid://cej12kcqx0d0o" path="res://scenes/player_hud.tscn" id="70_qypdi"]
[ext_resource type="PackedScene" uid="uid://bvucexn2jjegg" path="res://scenes/inventory.tscn" id="71_rw5li"]
[ext_resource type="AudioStream" uid="uid://btbl6uuevc3ml" path="res://assets/music/062708_laser-charging-81968.mp3" id="72_oqnt5"]
[ext_resource type="AudioStream" uid="uid://cwyduk35v2rq3" path="res://assets/music/laser-zap-90575.mp3" id="73_a0bjc"]
[ext_resource type="AudioStream" uid="uid://l526m1xr37wx" path="res://assets/music/whoosh-clothes-cape-243486.mp3" id="74_8gnet"]
[ext_resource type="AudioStream" uid="uid://cg1bp08k1vhim" path="res://assets/music/jumping_1-6452.mp3" id="74_l10mo"]
[ext_resource type="AudioStream" uid="uid://dp8t8mglol6m7" path="res://assets/music/laser-6042_3mUjfFLT.mp3" id="76_4pnxv"]
[ext_resource type="AudioStream" uid="uid://5ajp7efwu7di" path="res://assets/music/ouch-sound-effect-30-11844.mp3" id="77_nq8ug"]
[ext_resource type="AudioStream" uid="uid://bpelt88ax87me" path="res://assets/music/item-equip-6904.mp3" id="78_s5kut"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1e687"]
properties/0/path = NodePath(".:sync_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:sync_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:sync_animation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:sync_flip_h")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:is_dead")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:current_health")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_utmy2"]
atlas = ExtResource("25_rq3gg")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm23f"]
atlas = ExtResource("26_cw8od")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bufjo"]
atlas = ExtResource("27_wgi8d")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5swt"]
atlas = ExtResource("28_psrp8")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wud52"]
atlas = ExtResource("29_scbuj")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a57w6"]
atlas = ExtResource("30_ytllc")
region = Rect2(0, 0, 82, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnh2c"]
atlas = ExtResource("25_rq3gg")
region = Rect2(0, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n6itq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_si17p")
}, {
"duration": 1.0,
"texture": ExtResource("11_vh5vn")
}, {
"duration": 1.0,
"texture": ExtResource("12_477b5")
}, {
"duration": 1.0,
"texture": ExtResource("13_t23k8")
}, {
"duration": 1.0,
"texture": ExtResource("14_cpksw")
}],
"loop": false,
"name": &"attack_heavy",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_brw2j")
}, {
"duration": 1.0,
"texture": ExtResource("3_fc6ob")
}, {
"duration": 1.0,
"texture": ExtResource("4_8c6es")
}, {
"duration": 1.0,
"texture": ExtResource("5_qlqgm")
}, {
"duration": 1.0,
"texture": ExtResource("6_6h43l")
}, {
"duration": 1.0,
"texture": ExtResource("7_gmwnx")
}, {
"duration": 1.0,
"texture": ExtResource("8_2iat1")
}, {
"duration": 1.0,
"texture": ExtResource("9_xxpop")
}],
"loop": false,
"name": &"attack_heavy_charge",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utmy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm23f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bufjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5swt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wud52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a57w6")
}],
"loop": false,
"name": &"attack_light",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rhtpy")
}, {
"duration": 1.0,
"texture": ExtResource("3_p1agm")
}, {
"duration": 1.0,
"texture": ExtResource("4_yc4yj")
}, {
"duration": 1.0,
"texture": ExtResource("5_0j4us")
}],
"loop": true,
"name": &"dash",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_85s4c")
}, {
"duration": 1.0,
"texture": ExtResource("26_txka7")
}, {
"duration": 1.0,
"texture": ExtResource("27_owc6q")
}, {
"duration": 1.0,
"texture": ExtResource("28_colqp")
}, {
"duration": 1.0,
"texture": ExtResource("29_r871r")
}, {
"duration": 1.0,
"texture": ExtResource("30_ce0wu")
}, {
"duration": 1.0,
"texture": ExtResource("31_kf8tb")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("32_mdsum")
}, {
"duration": 1.0,
"texture": ExtResource("33_8m3qr")
}, {
"duration": 1.0,
"texture": ExtResource("32_mdsum")
}, {
"duration": 1.0,
"texture": ExtResource("33_8m3qr")
}, {
"duration": 1.0,
"texture": ExtResource("34_4xmop")
}, {
"duration": 1.0,
"texture": ExtResource("35_eeqlt")
}],
"loop": false,
"name": &"get_hit",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6bst3")
}, {
"duration": 1.0,
"texture": ExtResource("3_py1ao")
}, {
"duration": 1.0,
"texture": ExtResource("4_ry7wa")
}, {
"duration": 1.0,
"texture": ExtResource("5_rpbti")
}, {
"duration": 1.0,
"texture": ExtResource("6_cqhor")
}, {
"duration": 1.0,
"texture": ExtResource("7_m1atv")
}, {
"duration": 1.0,
"texture": ExtResource("8_nngd8")
}, {
"duration": 1.0,
"texture": ExtResource("9_st23i")
}, {
"duration": 1.0,
"texture": ExtResource("10_400f8")
}, {
"duration": 1.0,
"texture": ExtResource("11_hkbrb")
}, {
"duration": 1.0,
"texture": ExtResource("12_5agq7")
}, {
"duration": 1.0,
"texture": ExtResource("13_0mi3s")
}, {
"duration": 1.0,
"texture": ExtResource("14_adkx2")
}, {
"duration": 1.0,
"texture": ExtResource("15_gg58l")
}, {
"duration": 1.0,
"texture": ExtResource("16_hf20q")
}, {
"duration": 1.0,
"texture": ExtResource("17_s48ga")
}, {
"duration": 1.0,
"texture": ExtResource("18_nfqwp")
}, {
"duration": 1.0,
"texture": ExtResource("19_uo5ty")
}, {
"duration": 1.0,
"texture": ExtResource("20_1tcyl")
}, {
"duration": 1.0,
"texture": ExtResource("21_7um7m")
}],
"loop": true,
"name": &"idle",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_6rde3")
}, {
"duration": 1.0,
"texture": ExtResource("23_sj2hs")
}, {
"duration": 1.0,
"texture": ExtResource("24_fvqau")
}],
"loop": false,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_6rde3")
}, {
"duration": 1.0,
"texture": ExtResource("48_5y3k6")
}, {
"duration": 1.0,
"texture": ExtResource("49_wi6c0")
}, {
"duration": 1.0,
"texture": ExtResource("50_2w5xf")
}, {
"duration": 1.0,
"texture": ExtResource("24_fvqau")
}],
"loop": false,
"name": &"jump_flip",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_72b45")
}, {
"duration": 1.0,
"texture": ExtResource("23_gpeuw")
}, {
"duration": 1.0,
"texture": ExtResource("24_8raaw")
}, {
"duration": 1.0,
"texture": ExtResource("25_0iq5j")
}, {
"duration": 1.0,
"texture": ExtResource("26_5nql1")
}, {
"duration": 1.0,
"texture": ExtResource("27_oxf6g")
}, {
"duration": 1.0,
"texture": ExtResource("28_kholh")
}, {
"duration": 1.0,
"texture": ExtResource("29_y8rmw")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_rq3gg")
}, {
"duration": 1.0,
"texture": ExtResource("26_cw8od")
}, {
"duration": 1.0,
"texture": ExtResource("27_wgi8d")
}, {
"duration": 1.0,
"texture": ExtResource("28_psrp8")
}, {
"duration": 1.0,
"texture": ExtResource("29_scbuj")
}, {
"duration": 1.0,
"texture": ExtResource("30_ytllc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnh2c")
}],
"loop": false,
"name": &"slash",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j0j4y"]
radius = 4.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bimr"]
size = Vector2(31, 20)

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_7rjoq")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." groups=["players"]]
replication_interval = 0.017
replication_config = SubResource("SceneReplicationConfig_1e687")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-32, -64)
sprite_frames = SubResource("SpriteFrames_n6itq")
animation = &"attack_light"
autoplay = "idle"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -10)
shape = SubResource("CapsuleShape2D_j0j4y")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-2, -10)

[node name="HitBoxCollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_j0j4y")

[node name="AttackArea2D" type="Area2D" parent="." groups=["Sword"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2(21.5, -10)
shape = SubResource("RectangleShape2D_2bimr")
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -10)
zoom = Vector2(5, 5)

[node name="PlayerHUD" parent="." instance=ExtResource("70_qypdi")]

[node name="Inventory" parent="." instance=ExtResource("71_rw5li")]

[node name="Sounds" type="Node" parent="."]

[node name="heavy_attack_charged_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("72_oqnt5")
volume_db = -10.0
pitch_scale = 2.0

[node name="heavy_attack_released_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("73_a0bjc")
volume_db = -15.0
pitch_scale = 0.7

[node name="jumping_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("74_8gnet")
volume_db = -15.0

[node name="dashing_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("74_l10mo")
volume_db = 4.0

[node name="light_attack_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("76_4pnxv")
pitch_scale = 1.5

[node name="damage_taken_sound" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("77_nq8ug")

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="Sounds"]
position = Vector2(-2, -10)
stream = ExtResource("78_s5kut")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_attack_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
